--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 --><html><head>
   <meta charset="UTF-8">
   <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1">
-  <title>Yo Face</title>
+  <title>Bad Mirror</title>
   <script src="p5.js"></script>
   <script src="p5.sound.min.js"></script>
   <script src="ml5.min.js" type="text/javascript"></script>
