--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
   <p id='status'>Loading model...</p>
   <script src="sketch.js"></script>
-  <div id="info">
+  <div id="info" class="hidden>
     <button id="close" onclick="hideInfo()">X Close</button>
     <div id="info-inner">
       <button id="cam-toggle" onclick="toggleCam()">Toggle camera</button>
