--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
 <body>
   <p id='status'>Loading model...</p>
   <script src="sketch.js"></script>
-  <div id="info" class="hidden>
+  <div id="info">
     <button id="close" onclick="hideInfo()">X Close</button>
-    <div id="info-inner">
+    <div id="info-inner" class="hidden">
       <button id="cam-toggle" onclick="toggleCam()">Toggle camera</button>
       <div>created by <a href="https://amcc.io" target="_blank">amcc.io</a></div>
       <div><a href="https://github.com/amcc/bad-mirror">source</a></div>
