--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <p id='status'>Loading model...</p>
   <script src="sketch.js"></script>
   <div id="info">
-    <button id="close" onclick="hideInfo()">X Close</button>
+    <button id="close" onclick="hideInfo()">info</button>
     <div id="info-inner" class="hidden">
       <button id="cam-toggle" onclick="toggleCam()">Toggle camera</button>
       <div>created by <a href="https://amcc.io" target="_blank">amcc.io</a></div>
